--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.3.1",
     "react-autosuggest": "^9.3.4",
     "react-dom": "^16.3.1",
+    "react-isolated-scroll": "^0.1.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
